--- a/springclouddemo/service-ribbon/pom.xml
+++ b/springclouddemo/service-ribbon/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>service-ribbon</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
-    <name>service-ribbon</name>
+    <name>${project.artifactId}</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -37,6 +37,7 @@
 
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
